--- a/eStore/Jenkinsfile
+++ b/eStore/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline{
   agent{
     label 'myslave'
 }
- stages
+ stages{
   stage('git checkout'){
    steps{
      git 'https://github.com/balucc/eStore.git'
@@ -23,4 +23,4 @@ pipeline{
    }
   }
 }
-
+}
